Move Method::lowered_graph to a separate pass out of the Method class.
There is no reason to have it in a general API of Module/Method - it's
just another graph pass. It was there because some time ago modules were
not first class and all graphs were lowered. After that changed, this
API was added for easier transition, but now we don't need it anymore.

ghstack-source-id: 0ac8513989dafc7ac0bd97ddcfca2e431d643286
Pull Request resolved: https://github.com/pytorch/pytorch/pull/28242

--- a/caffe2/CMakeLists.txt
+++ b/caffe2/CMakeLists.txt
@@ -405,6 +405,7 @@ if (NOT INTERN_BUILD_MOBILE OR NOT BUILD_CAFFE2_MOBILE)
     ${TORCH_SRC_DIR}/csrc/jit/passes/liveness.cpp
     ${TORCH_SRC_DIR}/csrc/jit/passes/loop_unrolling.cpp
     ${TORCH_SRC_DIR}/csrc/jit/passes/lower_grad_of.cpp
+    ${TORCH_SRC_DIR}/csrc/jit/passes/lower_graph.cpp
     ${TORCH_SRC_DIR}/csrc/jit/passes/lower_tuples.cpp
     ${TORCH_SRC_DIR}/csrc/jit/passes/peephole.cpp
     ${TORCH_SRC_DIR}/csrc/jit/passes/remove_expands.cpp
